--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ shop/node_modules/.cache/vue-loader/9b0d3004aed094a6d768c66552446f99.json
 shop/node_modules/.cache/vue-loader/ac99d14e49844739c191c2e491699ea3.json
 shop/node_modules/.cache/vue-loader/bf7753fc1797f77d7a2cf507fa9ac3f4.json
 shop/node_modules/.cache/vue-loader/c33f729c8d10be95f852b3d132713886.json
+shop/.idea/workspace.xml
+shop/.idea/vcs.xml
