--- a/miniprogram-1/package.json
+++ b/miniprogram-1/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@miniprogram-component-plus/tabs": "^1.0.0",
     "weui-miniprogram": "^1.0.7"
   }
 }
