--- a/miniprogram-1/project.private.config.json
+++ b/miniprogram-1/project.private.config.json
@@ -1,54 +1,54 @@
 {
-    "setting": {},
-    "condition": {
-        "plugin": {
-            "list": []
+  "setting": {},
+  "condition": {
+    "plugin": {
+      "list": []
+    },
+    "game": {
+      "list": []
+    },
+    "gamePlugin": {
+      "list": []
+    },
+    "miniprogram": {
+      "list": [
+        {
+          "name": "课程分类",
+          "pathName": "pages/classify/classify",
+          "query": "",
+          "scene": null
         },
-        "game": {
-            "list": []
+        {
+          "name": "个人登录界面",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
         },
-        "gamePlugin": {
-            "list": []
+        {
+          "name": "个人中心",
+          "pathName": "pages/usercenter/usercenter",
+          "query": "",
+          "scene": null
         },
-        "miniprogram": {
-            "list": [
-                {
-                    "name": "我的消息",
-                    "pathName": "pages/msg/msg",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "课程分类",
-                    "pathName": "pages/classify/classify",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "个人登录界面",
-                    "pathName": "pages/index/index",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "个人中心",
-                    "pathName": "pages/usercenter/usercenter",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "登录界面",
-                    "pathName": "pages/login/login",
-                    "query": "",
-                    "scene": null
-                },
-                {
-                    "name": "注册界面",
-                    "pathName": "pages/regist/regist",
-                    "query": "",
-                    "scene": null
-                }
-            ]
+        {
+          "name": "登录界面",
+          "pathName": "pages/login/login",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "注册界面",
+          "pathName": "pages/regist/regist",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "课程详情",
+          "pathName": "pages/course/course",
+          "query": "courseId=1336135104330997761",
+          "scene": null
         }
+      ]
     }
+  }
 }
