--- a/miniprogram-1/app.json
+++ b/miniprogram-1/app.json
@@ -14,7 +14,8 @@
     "pages/coll-course/coll-course",
     "pages/classify/classify",
     "pages/search/search",
-    "pages/course/course"
+    "pages/course/course",
+    "pages/video/video"
   ],
   "window": {
     "backgroundTextStyle": "dark",
