--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ shop/node_modules/.cache/vue-loader/bf7753fc1797f77d7a2cf507fa9ac3f4.json
 shop/node_modules/.cache/vue-loader/c33f729c8d10be95f852b3d132713886.json
 shop/.idea/workspace.xml
 shop/.idea/vcs.xml
+shop/.idea/workspace.xml
